# python-sonicos-api

./: .gitignore  README.rst  pyproject.toml
sonicos_api/: sonicOS.py
tests/: test_python_sonicos_api.py
