[tool.poetry]
name = "sonicos-api"
version = "0.1.4"
description = "Lib to communicate with SonicWall's API"
authors = ["joaovmlima <oi.oaoj@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
